# sql-constructor

./: .flake8  .gitignore  LICENSE  README.md  example.py  pyproject.toml
.github/workflows/: coverage.yml  main.yml
sqlcon/: __init__.py  lib.py  sqlcon.py
tests/: test_example1.py  test_joinwith.py  test_make_valid_name.py  test_process.py  test_quotes.py  test_valid_names.py
